fixed minor overlaps

--- a/src/pages/Rhaddock.module.css
+++ b/src/pages/Rhaddock.module.css
@@ -1320,7 +1320,7 @@
     width: 100px;
     height: 100px;
     margin-bottom: 0vh;
-    top: 60vw !important;
+    top: 65vw !important;
     position: relative !important;
   }
 
